add maven-assembly-plugin in pom.xml